--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # 站点名称
-VITE_SITE_NAME = "無名の主页"
-VITE_SITE_URL = "imsyy.top"
+VITE_SITE_NAME = "龙离のSpace"
+VITE_SITE_URL = "longli.space"
 VITE_SITE_LOGO = "/images/icon/logo.png"
 
 # 简介文本
-VITE_DESC_HELLO = "Hello World !"
-VITE_DESC_TEXT = "一个建立于 21 世纪的小站，存活于互联网的边缘"
+VITE_DESC_HELLO = "longli's space"
+VITE_DESC_TEXT = "人生若只如初见，何事秋风悲画扇"
 VITE_DESC_HELLO_OTHER = "Oops !"
 VITE_DESC_TEXT_OTHER = "哎呀，这都被你发现了（ 再点击一次可关闭 ）"
 
@@ -22,7 +22,7 @@ VITE_WEATHER_KEY = "57eaea5833ff1616cfd1ff2c4cf9b58a"
 
 # 建站日期
 ## 请按照 YYYY-MM-DD 格式填写
-VITE_SITE_START = "2020-10-24"
+VITE_SITE_START = "2022-09-28"
 
 # 歌曲 API 地址
 ## 请参照 https://github.com/imsyy/Meting-API#cloudflare-workers 进行 API 服务部署
@@ -34,4 +34,4 @@ VITE_SONG_SERVER = "netease"
 # 播放类型 ( song-歌曲, playlist-播放列表, album-专辑, search-搜索, artist-艺术家 )
 VITE_SONG_TYPE = "playlist"
 # 播放 ID
-VITE_SONG_ID = "7452421335"
+VITE_SONG_ID = "962144998"
